# backlight

./: .gitignore  README.md
backlight/: CMakeLists.txt  backlight.sln  backlight.vcproj
backlight/src/: Bitmap.cpp  Bitmap.hpp  Bounding_Sphere.cpp  Bounding_Sphere.hpp  Box.cpp  Box.hpp  CSG.cpp  CSG.hpp  Camera.cpp  Camera.hpp  Colour.cpp  Colour.hpp  Cone.cpp  Cone.hpp  Cylinder.cpp  Cylinder.hpp  Display.cpp  Event.cpp  Event.hpp  Frame.cpp  Frame.hpp  Global.cpp  Global.hpp  Keywords.cpp  Keywords.hpp  Light_Source.cpp  Light_Source.hpp  Main.cpp  Main.hpp  Map.cpp  Map.hpp  Matrix.cpp  Matrix.hpp  Object.cpp  Object.hpp  Plane.cpp  Plane.hpp  Quadric.cpp  Quadric.hpp  Ray.cpp  (+23 more)
backlight/srs/: aberration.srs  csg test.srs  csg.srs  csg_test.srs  motion.srs  primitives.srs  texture.srs
lift/: array.hpp  constant_iterator.hpp  cross_product.hpp  differential.hpp  elementary.hpp  functors.hpp  interval.hpp  registry.hpp  scalar.hpp  singleton_list.hpp  traits.hpp  vector.hpp  vector_differential.hpp
